versioned_docs/version-4.1.x/reference/functions/Install-ADTSCCMSoftwareUpdates.mdx
---
id: Install-ADTSCCMSoftwareUpdates
title: Install-ADTSCCMSoftwareUpdates
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Scans for outstanding SCCM updates to be installed and installs the pending updates.

## SYNTAX

```powershell
Install-ADTSCCMSoftwareUpdates [[-SoftwareUpdatesScanWaitInSeconds] <Int32>]
 [[-WaitForPendingUpdatesTimeout] <TimeSpan>] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## DESCRIPTION

Scans for outstanding SCCM updates to be installed and installs the pending updates.

Only compatible with SCCM 2012 Client or higher.
This function can take several minutes to run.

## EXAMPLES

### EXAMPLE 1

```powershell
Install-ADTSCCMSoftwareUpdates
```

Scans for outstanding SCCM updates and installs the pending updates with default wait times.

### EXAMPLE 2

```powershell
Install-ADTSCCMSoftwareUpdates -WaitForPendingUpdatesTimeout 00:30:00
```

Scans for outstanding SCCM updates and installs the pending updates with a 30 minute timeout.

### EXAMPLE 3

```powershell
Install-ADTSCCMSoftwareUpdates -WaitForPendingUpdatesTimeout (New-TimeSpan -Minutes 30)
```

Scans for outstanding SCCM updates and installs the pending updates with a 30 minute timeout.

## PARAMETERS

### -SoftwareUpdatesScanWaitInSeconds

The amount of time to wait in seconds for the software updates scan to complete.

```yaml
Type: Int32
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: 180
Accept pipeline input: False
Accept wildcard characters: False
```

### -WaitForPendingUpdatesTimeout

The amount of time to wait for missing and pending updates to install before exiting the function.

```yaml
Type: TimeSpan
Parameter Sets: (All)
Aliases:

Required: False
Position: 2
Default value: [System.TimeSpan]::FromMinutes(45)
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not return any objects.
## NOTES
An active ADT session is NOT required to use this function.

This function supports the -WhatIf and -Confirm parameters for testing changes before applying them.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Install-ADTSCCMSoftwareUpdates](https://psappdeploytoolkit.com/docs/reference/functions/Install-ADTSCCMSoftwareUpdates)
